[package]
name = "melorun"
version = "0.7.5"
description = "Melodeon interactive repl and command-line evaluator"
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
colored = "2.0.0"
env_logger = "0.9.0"
hex = "0.4.3"
log = "0.4.17"
regex = "1.6.0"
rustyline = { version = "9.1.2", optional = true }
scopeguard = "1.1.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
snailquote = "0.3.1"
stdcode = "0.1.10"
structopt = "0.3.26"
tap = "1.0.1"
tempfile = "3.3.0"
themelio-stf = { version = "0.11.10", features = ["print"] }
themelio-structs = "0.2.10"
serde_with= "1.14.0"
mil = "0.4.0"
# mil = {path="../mil"}
melodeon = "0.5.13"
# melodeon= {path="../melodeon-rs"}
thiserror = "1.0.34"
derivative = "2.2.0"
tmelcrypt = "0.2.4"
serde_yaml = "0.9.11"

[features]
default=["rustyline"]
# rustyline=[]

[profile.release]
debug=2


# [patch.crates-io]
# themelio-stf={path="../themelio-stf"}  
